--- a/package.json
+++ b/package.json
@@ -21,27 +21,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bsv/sdk": "^1.2.4",
     "@bsvwasm/mnemonic": "^1.0.3",
-    "@sweetalert2/theme-dark": "^5.0.15",
-    "bitcoin-bap": "^1.3.1",
-    "bitcore-lib": "^10.0.17",
-    "bitcore-mnemonic": "^10.0.17",
-    "body-parser": "^1.20.2",
+    "@sweetalert2/theme-dark": "^5.0.18",
+    "bitcore-lib": "^10.5.3",
+    "bitcore-mnemonic": "^10.5.3",
+    "body-parser": "^1.20.3",
     "bsv": "1.5.6",
-    "bsv-wasm": "^2.0.2",
+    "bsv-bap": "^0.0.5",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "cpy-cli": "^5.0.0",
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
     "libp2p": "0.42.0",
-    "minidenticons": "^4.2.0",
+    "minidenticons": "^4.2.1",
     "nedb": "^1.8.0"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1",
-    "jest": "^29.6.1",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
     "microbundle": "^0.15.1",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.10"
   }
 }
